# LLMTrainingTools

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  precommit.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pylint.yml
.run/: LLMTrainingTools.run.xml
data/: qa_data.db
jsonl_data_to_db/: csv_to_jsonl.py  db_to_jsonl.py  jsonl_to_sqllite.py
jsonl_data_to_db/data/: qa_data.db  qa_data.jsonl
models/: llm_training_data_model.py
samples/: sample_chat.jsonl  sample_qa.csv
scripts/: quickstart.sh
src/: __init__.py  ai_api.py  app.py  cli.py  config.py  utils.py
src/data_tools/: clean_data_in_db.py  database_utils.py  dataset_validation.py  duplicate_checker.py
src/data_tools/import_utils/: csv_to_jsonl.py  db_to_jsonl.py  jsonl_to_sqllite.py
src/frontend/static/css/: table_main.css
src/frontend/static/js/: qa_generator.js  table_main.js
src/frontend/templates/: add_new_row.html  bulk_remove_text_popup.html  header.html  navbar.html  qa_generator.html  table_view.html  upload_file.html
src/models/: llm_training_data_model.py
templates/: table_view.html
tests/: test_app_startup.py  test_csv_jsonl.py  test_database_utils.py  test_duplicate_detection.py  test_jsonl_roundtrip.py  test_quickstart.py  test_validation.py  test_validation_api.py
vectordb/: dup_check_vectors.py  milvus-standalone-docker-compose-gpu.yml  milvus-standalone-docker-compose.yml  vectordb.env  vectordb.env.example  zilliz-cloud-Cluster-01-username-password.txt
vectordb/volumes/etcd/member/snap/: db
vectordb/volumes/milvus/rdb_data/: IDENTITY  LOG
vectordb/volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
vectordb/volumes/minio/.minio.sys/: format.json
