[project]
name = "llmtrainingtools"
version = "0.1.0"
description = "Utilities and a Flask UI for creating and managing LLM training data."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "annoy==1.17.3",
    "blinker==1.7.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.0.3",
    "httpx<0.28",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==2.1.5",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "openai==1.23.2",
    "pandas~=2.2.2",
    "pinecone-client==3.2.2",
    "pymilvus",
    "python-dotenv~=1.0",
    "scikit-learn==1.5.0",
    "sqlalchemy==2.0.29",
    "torch==2.8.0",
    "tqdm==4.66.4",
    "transformers==4.53.0",
    "typing-extensions==4.11.0",
    "werkzeug==3.1.5",
]

[dependency-groups]
dev = [
    "pylint",
    "ruff",
]

[tool.uv]
package = false

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "fixme",
    "f-string-without-interpolation",
    "global-variable-not-assigned",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-name",
    "line-too-long",
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "too-many-locals",
    "too-many-return-statements",
    "unspecified-encoding",
    "unused-variable",
    "wrong-import-order",
]
