[project]
name = "llmtrainingtools"
version = "0.1.0"
description = "A local data workbench for preparing chat fine-tuning datasets from CSV, SQLite, and JSONL."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "python-dotenv~=1.0",
    "werkzeug==3.1.5",
]

[project.optional-dependencies]
ai = [
    "annoy==1.17.3",
    "httpx<0.28",
    "nltk==3.9.1",
    "openai==1.23.2",
    "pandas~=2.2.2",
    "pinecone-client==3.2.2",
    "pymilvus",
    "scikit-learn==1.5.0",
    "torch==2.8.0",
    "tqdm==4.66.4",
    "transformers==4.53.0",
]

[project.scripts]
llm-training-tools = "src.cli:main"

[dependency-groups]
dev = [
    "pylint",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "fixme",
    "f-string-without-interpolation",
    "global-variable-not-assigned",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-name",
    "line-too-long",
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "too-many-locals",
    "too-many-return-statements",
    "unspecified-encoding",
    "unused-variable",
    "wrong-import-order",
]
